--- a/images/index.css
+++ b/images/index.css
@@ -6,11 +6,42 @@ body{font-family: "Inter", sans-serif; background-color: black;color: white;marg
       
       /* Header-section- style */
 
-        /* nav-bar--style */
+      /* nav-bar--style */  
 
-.nav-bar{display: flex; justify-content: space-between; align-items: center; margin: 1rem 10rem;}
+.nav-bar{display: flex; justify-content: space-between; align-items: center; margin: 1rem 10rem;} 
+
 .nav-ul{display: flex;justify-content: center;align-items: center;}
 .nav-ul li{list-style: none; margin-left: 2.5rem;}
 .nav-h3{color: rgb(230,83,60);font-size: 3rem;font-weight: 800;}
 .home{background-color: rgb(230,83,60) ;color: white;height: 30px;width: 80px;border-radius: 18px;display: flex;justify-content: center;align-items: center;}
 .bar{ display: none;}
+      
+ /* div-text-style */
+      
+      .header-section{display: flex;margin: 2rem 10rem;} 
+
+
+.header-h3{ font-size: 73px;font-weight: 700;margin-bottom:30px ;line-height: 85px;}
+
+.shape{ font-family: 'Miama', sans-serif; font-size: 60px;}
+
+.button-1{ background-color: rgb(230,83,60);color: white; height: 50px; width: 170px;border-radius: 30px; margin-right: 20px;font-size: 17px;margin-top: 28px;}
+
+.button-2{ height: 50px;width: 170px;border-radius: 30px;background-color: black;border: 3px solid white;color: white;
+    font-size: 17px ;margin-top: 28px;}
+
+    /* div-image-style */
+
+    .header-image-div{ position: relative;padding-left: 11rem;}
+
+    .ball{height: 40px;width: 40px;background-color:rgb(230,83,60) ;border-radius: 100%;margin-right: 20px;position: relative;}
+
+    .ball-div{backdrop-filter: blur(20px);
+    background: rgb(48, 48, 48,0.54); width: 170px;display: flex;justify-content: center;align-items: center;position: absolute;
+left: 75px;bottom: 75px; border-radius: 8px;padding: 15px 0px;}
+
+.no-ball{backdrop-filter: blur(20px);
+    background: rgb(48, 48, 48,0.54); position: absolute; right: 0px;top: 120px;border-radius: 8px;padding: 15px 10px;}
+
+    .span-ball{font-size: 13px;}
+    .icon-1{display: none;}
