--- a/images/index.css
+++ b/images/index.css
@@ -15,13 +15,14 @@ body{font-family: "Inter", sans-serif; background-color: black;color: white;marg
 .nav-h3{color: rgb(230,83,60);font-size: 3rem;font-weight: 800;}
 .home{background-color: rgb(230,83,60) ;color: white;height: 30px;width: 80px;border-radius: 18px;display: flex;justify-content: center;align-items: center;}
 .bar{ display: none;}
+.header-p{ color: rgb(255,255,255,0.5);font-size: 12px;}
       
  /* div-text-style */
       
       .header-section{display: flex;margin: 2rem 10rem;} 
 
 
-.header-h3{ font-size: 73px;font-weight: 700;margin-bottom:30px ;line-height: 85px;}
+.header-h3{ font-size: 73px;font-weight: 700;margin-bottom:30px ;line-height: 80px;}
 
 .shape{ font-family: 'Miama', sans-serif; font-size: 60px;}
 
@@ -57,3 +58,19 @@ left: 75px;bottom: 75px; border-radius: 8px;padding: 15px 0px;}
 .habit-h3{ text-align: center; font-size: 40px;margin-bottom: 10px;}
 .border-radius{ border-radius: 100%;}
 .pk{ color: rgb(255,255,255,0.5);font-size: 10px;}
+
+   /* extra section */
+
+   .extra-section{ margin: 5rem 10rem;}
+   .extra-div{ display: flex;align-items: center;padding: 40px;background-color: rgb(34, 34, 34);border-radius: 20px;justify-content: space-between;
+}
+
+.button-extra{height: 40px;width: 170px; padding: 10px 0px;}
+.extra-image{overflow: hidden;
+    height: 250px; width: 340px; position: relative;}
+    .img-run{width: 100%; height: 100%;background-image:url(./run.jpg);
+    background-size:180% ;background-position-x:400px ;border-radius: 10px;}
+
+.extra-p{font-size: 12px;font-weight: 400;color: rgb(255,255,255,0.5);line-height:12px ;}
+.extra-h3{ font-size: 30px;margin-bottom: 15px;}
+.nai{display: none;}
