--- a/images/index.css
+++ b/images/index.css
@@ -74,3 +74,26 @@ left: 75px;bottom: 75px; border-radius: 8px;padding: 15px 0px;}
 .extra-p{font-size: 12px;font-weight: 400;color: rgb(255,255,255,0.5);line-height:12px ;}
 .extra-h3{ font-size: 30px;margin-bottom: 15px;}
 .nai{display: none;}
+
+/*      table type section-style.     */
+
+.section-table-type{  margin: 2rem 0rem;}
+.table-type-div{ padding: 100px 150px;display: flex; background-color: rgb(34, 34, 34);justify-content: space-between;}
+.section-text{margin: 0px 20% 50px 30%;}
+.t-text{ font-size: 12px; line-height: 18px;color: rgba(255,255,255,0.6);}
+.margin-h3{ margin-bottom: 10px;font-size: 30px;}
+     /* table section style */
+
+th , td{border: 1px solid rgba(255, 255, 255,0.1);height: 40px;}
+td{color: rgba(255,255,255,0.6);width: 110px;font-size: 12px;height:20px;padding-left: 10px;}
+.margin-1-h3{ margin-bottom: 20px; font-size: 23px; text-align: center;}
+ 
+/* input-style */
+.select-1{ width: calc(50% - 27px); height: 30px;border-radius: 5px;background-color:rgba(255,255,255,0.1) ;margin-bottom: 10px;color:rgba(255,255,255,0.6)  ; border-right: 6px solid transparent;border-left: 6px solid transparent;}
+input{width: calc(50% - 33px);margin-top: 5px;border-radius: 5px;background-color:rgba(255,255,255,0.1) ; margin-bottom: 20px;color:rgba(255,255,255,0.6);height: 26px; border-left: 6px solid transparent;}
+
+.select-2{width:calc(100% - 51px); height: 30px; border-radius: 5px;background-color:rgba(255,255,255,0.1) ; color:rgba(255,255,255,0.6); margin-bottom: 10px; border-right: 6px solid transparent;border-left: 6px solid transparent;} 
+
+.button-table{background-color: rgb(230, 83, 60);color: white;height: 30px;width: 150px;border-radius: 15px;}
+.p-p{font-size: 10px;color:rgba(255,255,255,0.6) ;}
+.margin-1{ margin-bottom: 20px;}
