--- a/images/index.css
+++ b/images/index.css
@@ -97,3 +97,13 @@ input{width: calc(50% - 33px);margin-top: 5px;border-radius: 5px;background-colo
 .button-table{background-color: rgb(230, 83, 60);color: white;height: 30px;width: 150px;border-radius: 15px;}
 .p-p{font-size: 10px;color:rgba(255,255,255,0.6) ;}
 .margin-1{ margin-bottom: 20px;}
+
+/* trainer- section 4-   style */
+
+.main-section-4{margin: 5rem 10rem;}
+.section4-div{display: grid;grid-template-columns: repeat(3,1fr);gap: 20px;padding: 20px; background-color: rgba(255, 255, 255,0.1);}
+.trainer-img1{position: relative}
+.trainer-img{ width: 100%; height: 100%;border-radius: 10px;}
+.position{position: absolute;bottom: 20px;left: 10px;}
+.position-2{position: absolute;bottom: 5px;left: 12px;font-size: 14px;color:rgba(255,255,255,0.6) ;}
+
