--- a/images/index.css
+++ b/images/index.css
@@ -107,3 +107,18 @@ input{width: calc(50% - 33px);margin-top: 5px;border-radius: 5px;background-colo
 .position{position: absolute;bottom: 20px;left: 10px;}
 .position-2{position: absolute;bottom: 5px;left: 12px;font-size: 14px;color:rgba(255,255,255,0.6) ;}
 
+/* footer-design */
+
+.section-footer{ margin-top: 5rem; background-color:rgba(255, 255, 255,0.1) ;}
+
+.footer-div3,.footer-div2{padding-left: 2rem;}
+
+.footer-div-main{display: flex;justify-content: space-between;align-items: center;padding: 4rem 10rem;}
+
+.footer-div2 h3 ,.footer-div3 h3{ font-size: 25px;}
+.footer-div2 h4 ,.footer-div3 h4 ,.footer-div1 p{color:rgba(255, 255, 255,0.5);line-height: 30px; font-size: 15px; }
+.footer-div1 h3 { color: rgb(230, 83, 60);font-size:35px ;}
+.high-footer{ margin: 3rem 11rem 0rem 11rem;padding-bottom: 2rem;border-top: 2px solid rgba(255, 255, 255,0.5);}
+h2{color: rgba(255, 255, 255,0.5)  ;text-align: center;}
+.footer-div1 p{font-size: 10px;line-height: 20px;}.footer-div1{padding-left: 20px;}
+
