--- a/images/index.css
+++ b/images/index.css
@@ -16,18 +16,19 @@ body{font-family: "Inter", sans-serif; background-color: black;color: white;marg
 .nav-h3{color: rgb(230,83,60);font-size: 3rem;font-weight: 800;}
 .home{background-color: rgb(230,83,60) ;color: white;height: 30px;width: 80px;border-radius: 18px;display: flex;justify-content: center;align-items: center;}
 .bar{ display: none;}
-.header-p{ color: rgb(255,255,255,0.5);font-size: 12px;}
+
       
  /* div-text-style */
       
       .header-section{display: flex;margin: 2rem 10rem;} 
-
+      .header-p{ color: rgb(255,255,255,0.5);font-size: 12px;}
 
 .header-h3{ font-size: 73px;font-weight: 700;margin-bottom:30px ;line-height: 80px;}
 
 .shape{ font-family: 'Miama', sans-serif; font-size: 60px;}
 
-.button-1{ background-color: rgb(230,83,60);color: white; height: 50px; width: 170px;border-radius: 30px; margin-right: 20px;font-size: 17px;margin-top: 28px;}
+.button-1{ background-color: rgb(230,83,60);color: white; height: 50px; width: 170px;border-radius: 30px; 
+    margin-right: 20px;font-size: 17px;margin-top: 28px;}
 
 .button-2{ height: 50px;width: 170px;border-radius: 30px;background-color: black;border: 3px solid white;color: white;
     font-size: 17px ;margin-top: 28px;}
@@ -62,7 +63,7 @@ left: 75px;bottom: 75px; border-radius: 8px;padding: 15px 0px;}
 
    /* extra section */
 
-   .extra-section{ margin: 5rem 10rem;}
+  .extra-section{ margin: 5rem 10rem;}
    .extra-div{ display: flex;align-items: center;padding: 40px;background-color: rgb(34, 34, 34);border-radius: 20px;justify-content: space-between;
 }
 
@@ -74,8 +75,8 @@ left: 75px;bottom: 75px; border-radius: 8px;padding: 15px 0px;}
 
 .extra-p{font-size: 12px;font-weight: 400;color: rgb(255,255,255,0.5);line-height:12px ;}
 .extra-h3{ font-size: 30px;margin-bottom: 15px;}
-.nai{display: none;}
-
+.nai{display: none;} 
+.extra-img1{width: 100%;border-radius: 10px;}
 /*      table type section-style.     */
 
 .section-table-type{  margin: 2rem 0rem;}
@@ -90,7 +91,9 @@ td{color: rgba(255,255,255,0.6);width: 110px;font-size: 12px;height:20px;padding
 .margin-1-h3{ margin-bottom: 20px; font-size: 23px; text-align: center;}
  
 /* input-style */
-.select-1{ width: calc(50% - 27px); height: 30px;border-radius: 5px;background-color:#ffffffa4 ;margin-bottom: 10px;color:rgba(255,255,255,0.6)  ; border-right: 6px solid transparent;border-left: 6px solid transparent;}
+.select-1{ width: calc(50% - 27px); height: 30px;border-radius: 5px; margin-bottom: 10px;
+    background-color:rgba(255,255,255,0.1);color:rgba(255,255,255,0.6);
+     border-right: 6px solid transparent;border-left: 6px solid transparent;}
 input{width: calc(50% - 33px);margin-top: 5px;border-radius: 5px;background-color:rgba(255,255,255,0.1) ; margin-bottom: 20px;color:rgba(255,255,255,0.6);height: 26px; border-left: 6px solid transparent;}
 
 .select-2{width:calc(100% - 51px); height: 30px; border-radius: 5px;background-color:rgba(255,255,255,0.1) ; color:rgba(255,255,255,0.6); margin-bottom: 10px; border-right: 6px solid transparent;border-left: 6px solid transparent;} 
@@ -107,7 +110,7 @@ input{width: calc(50% - 33px);margin-top: 5px;border-radius: 5px;background-colo
 .my-2{width: 100%; height:300px ;  border-radius: 20px;}
 .video-text p{ color: rgb(42, 52, 165);font-family: "Kalnia Glaze", serif;font-size: 15px;font-weight: 900; }
 .video-text h2{ font-family: 'Miama', sans-serif;color: aqua; font-size: 30px;margin: 40px 0px;}
-.video-text{ background-image: url(../photo-1722453614851-56ce00d84aa0.avif); background-size:cover;}
+.video-text{ background-image: url(../photo-1722453614851-56ce00d84aa0.avif); background-size:cover;} 
 /* trainer- section 4-   style */
 
 .main-section-4{margin: 5rem 10rem;}
@@ -115,52 +118,65 @@ input{width: calc(50% - 33px);margin-top: 5px;border-radius: 5px;background-colo
 .trainer-img1{position: relative}
 .trainer-img{ width: 100%; height: 100%;border-radius: 10px;}
 .position{position: absolute;bottom: 20px;left: 10px;}
-.position-2{position: absolute;bottom: 5px;left: 12px;font-size: 14px;color:rgba(255,255,255,0.6) ;}
+.position-2{position: absolute;bottom: 5px;left: 12px;font-size: 14px;color:rgba(255,255,255,0.6) ;} 
 
 /* footer-design */
 
-.section-footer{ margin-top: 5rem; background-color:rgba(255, 255, 255,0.1) ;}
+ .section-footer{ margin-top: 5rem; background-color:rgba(255, 255, 255,0.1) ;}
 
 .footer-div3,.footer-div2{padding-left: 2rem;}
 
-.footer-div-main{display: flex;justify-content: space-between;align-items: center;padding: 4rem 10rem;}
+.footer-div-main{display: flex;justify-content: space-between;padding: 4rem 10rem;}
 
 .footer-div2 h3 ,.footer-div3 h3{ font-size: 25px;}
 .footer-div2 h4 ,.footer-div3 h4 ,.footer-div1 p{color:rgba(255, 255, 255,0.5);line-height: 30px; font-size: 15px; }
 .footer-div1 h3 { color: rgb(230, 83, 60);font-size:35px ;}
 .high-footer{ margin: 3rem 11rem 0rem 11rem;padding-bottom: 2rem;border-top: 2px solid rgba(255, 255, 255,0.5);}
 h2{color: rgba(255, 255, 255,0.5)  ;text-align: center;}
-.footer-div1 p{font-size: 10px;line-height: 20px;}.footer-div1{padding-left: 20px;}
+.footer-div1 p{font-size: 10px;line-height: 20px;}
+.footer-div1{padding-left: 20px;} 
 
-
-/* responsive style */
- 
-/* @media screen and (max-width:576px){
-    .nav-bar,.nav-ul li ,.button-1,.button-2,.header-img-div,.ball,.no-ball,.habit-section,.extra-image,.section-table-type,.div-type,.table-type-div,.section-text,.main-section-4,.section-footer,.footer-div,.high-footer,.header-section{margin: 0px;padding: 0px;}
-    
-    .nav-li{ display: none;}
-    .header-secton{margin: 0px;padding: 0px;display: flex;flex-direction: column;}
-    .no-ball{padding: 0px 20px;position: absolute;top: 38px;}
-    .header-image-div{margin-top:3rem;}
-    .ball{margin-right: 10px;}
-    .ball-div{position: absolute;left: 10px;bottom: 250px;}
-    .habit-image{display: grid;grid-template-columns: 1fr;position: relative;}
-    .reponsive-img{margin: 0px 25%;}
-    .extra-div{display: flex;flex-direction: column;justify-content: center;align-items: center; margin: 0%;padding: 0%;}
-    .nai,.extra-text{width: calc(100% - 80px);padding: 40px;border-radius: 60px;display: block;}
-    .img-run{display: none;}
-    .extra-div{margin: 5% 20px;}
-    .button-extra{width: 100%;margin-top: 10px;}
-    .table-type-div{display: flex;flex-direction: column;margin: 0px;padding: 0px;}
-    .table-div ,.div-type{margin-left: 20px;}
-    .img1{display: none;}
-    .section4-div{display: flex;flex-direction: column;}
-    .high-footer{padding-bottom:1rem ;}
-    .footer-div1{margin-left: 2rem;}
-    .header-h3{font-size: 3rem;}
-    .nav-bar{margin: 0px 1rem;}
+@media screen and (max-width:576px) {
+    .nav-bar{margin: 1rem 2rem ;padding: 0px;}
+    .nav-ul li{margin: 0px;}
+    .nav-h3{ font-size: 1.7rem;}
+    .nav-ul{display: none;}
     .bar{display: block;}
-    .icon-1{position: absolute;left: 15px;display: block;}
-    .nav-ul{display: none;} 
-}*/
+    .button-1,.button-2{width: calc(50% - 1rem)}
 
+ .header-section{margin: 1rem 1rem;display: flex;flex-direction: column;}
+    .button-1{margin-right:0px 0rem;}
+    .header-image-div{ padding-left: 0px;}
+    .ball{margin-right: 20px;} 
+    .ball-div{margin: 0%;position: absolute;left: 0px;bottom:275px ;}
+    .no-ball{margin: 0px; padding-top: 10px;position: absolute;right:2%;top:10%;}
+    .header-h3{ font-size: 50px; }
+    .icon-1{display: block; position: absolute; left: 15px;top: 13px;}
+    .habit-section{ margin: 1rem 1rem;}
+    .habit-image{display: flex;flex-direction: column;justify-content: center;align-items: center;}
+    .habit-h3{font-size: 25px;}
+    .extra-section{ margin: 0rem 1rem;}
+    .img-run{ display: none;}
+.nai{display: block; margin: 20px 1rem;}
+
+.extra-div{display: flex;flex-direction: column;justify-content: space-between;}
+.table-type-div{ display: flex;flex-direction: column;padding: 0px;}
+.section-text{margin: 0px;}
+.margin-h3{ text-align: start;}
+.margin-1-h3{text-align: start;font-size: 15px;margin-top: 19px;}
+.margin-1{font-size: 15px;margin-top: 19px;}
+.table-type-div{ margin-top: 20px;padding: 1rem 0rem 1rem 1rem;}
+.section-text{margin-left: 1rem;}
+.my-section{margin: 1rem 1rem;}
+.my-img-div{display:grid ;grid-template-columns: 1fr;}
+.my-video{display: grid;grid-template-columns: 1fr;}
+.main-section-4{margin: 1rem 1rem;}
+.section4-div{ display: grid;grid-template-columns: 1fr;}
+.section-footer{margin: 1rem;}
+.footer-div3,.footer-div2{padding: 0%;margin: 0%;}
+.footer-div-main{padding: 0rem 1rem; display: flex;flex-direction: column;margin: 2rem 0rem;line-height: 50px;}
+.high-footer{margin: 1rem 1rem;}
+.footer-div1{padding-left: 0px;margin: 0px;}
+.footer-div3,.footer-div2{padding-left: 0px;margin: 0px;}
+h2{text-align: start;font-size: 15px; margin-top: 10px;}
+}
